# sqlx-fmt

./: ACTION.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  action.yml
.github/workflows/: ci.yml  example.yml
code/in/: migrate.rs  query.rs  query_as.rs  query_as_unchecked.rs  query_scalar.rs  query_scalar_unchecked.rs  query_unchecked.rs  sql.sql
code_to_format/: query.rs
scripts/: check-format.sh  format-all.sh
src/: formatter.rs  fs.rs  lib.rs  main.rs  tree_sitter.rs
tests/: common.rs  migrate.rs  query.rs  query_as.rs  query_as_unchecked.rs  query_scalar.rs  query_scalar_unchecked.rs  query_unchecked.rs  raw.rs  raw_as.rs  raw_double_hash.rs  raw_empty_line.rs  raw_indented.rs  raw_indented_literal.rs  raw_nested.rs  raw_single.rs  raw_single_to_many.rs  single.rs  single_indented.rs  single_to_many.rs
