[package]
name = "sqlx-fmt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
walkdir = "2.0"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
anyhow = "1.0.100"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
test-log = "0.2.18"
text-diff = "0.4.0"
